--- a/index.html
+++ b/index.html
@@ -806,11 +806,60 @@
                 githubUrl: "https://github.com/uditnegi16/Email-Automation-Platform"
             },
             {
-                title: "E-commerce Analytics Dashboard",
-                description: "Built a comprehensive dashboard for analyzing e-commerce performance metrics with interactive visualizations.",
-                tags: ["React", "D3.js", "Node.js", "MongoDB"],
-                image: "https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60",
-                githubUrl: "https://github.com/uditnegi16/Ecommerce-Dashboard"
+                title: "Real-Time Competitor Strategy Tracker for E-Commerce",
+                description: "A real-time competitive intelligence tool that monitors competitor pricing, discounts, and customer sentiment using ML and LLMs.",
+                tags: ["Python", "Streamlit", "ARIMA", "Hugging Face", "Groq API", "Slack API"],
+                image: "https://images.unsplash.com/photo-1563017256-6c4b9adc63ca?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                githubUrl: "https://github.com/uditnegi16/Real-Time-Competitor-Strategy-Tracker-for-E-Commerce",
+                applyLink: "https://uditnegicomp-tracker.streamlit.app/"
+            },
+            {
+                title: "Adaptive Language Modeling for STEM Education",
+                description: "Developed fine-tuned language models for STEM subjects, enabling personalized content generation and Q&A with high accuracy.",
+                tags: ["PyTorch", "Transformers", "LoRA", "QLoRA", "Hugging Face", "GPT-2"],
+                image: "https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                githubUrl: "https://github.com/uditnegi16/Adaptive-Language-Modeling-for-STEM-Education",
+                applyLink: "https://huggingface.co/uditnegi16"
+            },
+            {
+                title: "Flipkart Customer Satisfaction Prediction Dashboard",
+                description: "An interactive ML-powered dashboard to analyze and predict customer satisfaction scores from support logs.",
+                tags: ["Python", "Streamlit", "Scikit-learn", "Pandas", "Seaborn", "Matplotlib"],
+                image: "https://images.unsplash.com/photo-1556155092-490a1ba16284?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                githubUrl: "https://github.com/uditnegi16/Flipkart-Customer-satisfaction-prediction",
+                applyLink: "https://uditnegiflipkart-dashboard.streamlit.app/"
+            },
+            {
+                title: "Recruitment Automation System",
+                description: "An automated pipeline that collects, shortlists, and enriches applicant profiles using rule-based filtering and LLM evaluation.",
+                tags: ["Python", "Airtable API", "Google Gemini API", "Pandas", "JSON"],
+                image: "https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                githubUrl: "https://github.com/uditnegi16/recruitment-automation-system",
+                applyLink: "https://uditnegi-recruitment-automation.herokuapp.com/"
+            },
+            {
+                title: "Multi-Feature Telegram Bot",
+                description: "An AI-powered Telegram bot capable of document processing, image analysis, and web search with summarization.",
+                tags: ["Python", "Telegram Bot API", "Google Gemini API", "MongoDB", "OpenAI API"],
+                image": "https://images.unsplash.com/photo-1611606063065-ee7946f0787a?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                githubUrl: "https://github.com/uditnegi16/Telegram-Bot-with-File-Handling-AI-and-Web-Search",
+                applyLink: "https://t.me/uditnegi_ai_bot"
+            },
+            {
+                title: "No-Code AI Workflow Builder",
+                description: "A visual drag-and-drop interface for building AI-powered workflows with document processing, LLMs, and chat.",
+                tags: ["React", "FastAPI", "PostgreSQL", "ChromaDB", "OpenAI API", "Tailwind CSS"],
+                image: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                githubUrl: "https://github.com/uditnegi16/AI-PLANET",
+                applyLink: "https://ai-planet-demo.vercel.app/"
+            },
+            {
+                title: "Personal Voice Assistant for Code Generation",
+                description: "A multi-modal assistant that recognizes speech emotion and generates/executes Python code via voice commands.",
+                tags: ["PyTorch", "Librosa", "Google Gemini API", "SpeechRecognition", "CNN"],
+                image: "https://images.unsplash.com/photo-1589256469067-ea99122bbdc4?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                githubUrl: "https://github.com/uditnegi16/personal_voice_assistant_for_code_generation",
+                applyLink: "#"
             }
         ];
 
