--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                 title: "Multi-Feature Telegram Bot",
                 description: "An AI-powered Telegram bot capable of document processing, image analysis, and web search with summarization.",
                 tags: ["Python", "Telegram Bot API", "Google Gemini API", "MongoDB", "OpenAI API"],
-                image": "https://images.unsplash.com/photo-1611606063065-ee7946f0787a?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                image: "https://images.unsplash.com/photo-1611606063065-ee7946f0787a?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
                 githubUrl: "https://github.com/uditnegi16/Telegram-Bot-with-File-Handling-AI-and-Web-Search",
             },
             {
@@ -996,4 +996,5 @@
 </body>
 
 </html>
+
 
